--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,70 @@
 
 <head>
 	<meta charset="UTF-8">
+	<title>お問い合わせ｜株式会社令和ガールズ</title>
+	<meta name="description" content="株式会社令和ガールズへのお問い合わせページです。SNS運用やキャスティングのご依頼、パートナーシップのお申し込みはこちらから。">
+	<meta name="keywords" content="令和ガールズ, お問い合わせ, SNS支援, PR案件, インフルエンサーキャスティング, アパレル相談">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>お問い合わせ</title>
+	<meta name="author" content="REIWAGIRLS Inc.">
+	<meta name="theme-color" content="#ffffff">
+
+	<!-- Canonical -->
+	<link rel="canonical" href="https://reiwagirls.co.jp/contact.html">
+	<link rel="icon" href="/favicon.ico">
+
+	<!-- OGP -->
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="お問い合わせ｜株式会社令和ガールズ">
+	<meta property="og:description" content="SNS・アパレル・プロデュースに関するお問い合わせはこちら。">
+	<meta property="og:url" content="https://reiwagirls.co.jp/contact.html">
+	<meta property="og:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+
+	<!-- Twitterカード -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="お問い合わせ｜株式会社令和ガールズ">
+	<meta name="twitter:description" content="SNSプロデュース・PR支援・ブランド制作のご相談はこちらから。">
+	<meta name="twitter:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+
+	<!-- 構造化データ Organization -->
+	<script type="application/ld+json">
+	 {
+	   "@context": "https://schema.org",
+	   "@type": "Organization",
+	   "name": "REIWAGIRLS Inc.",
+	   "url": "https://reiwagirls.co.jp",
+	   "logo": "https://reiwagirls.co.jp/img/reiwachan.png",
+	   "contactPoint": {
+	     "@type": "ContactPoint",
+	     "telephone": "+81-3-6824-2081",
+	     "contactType": "customer support",
+	     "areaServed": "JP",
+	     "availableLanguage": ["Japanese"]
+	   }
+	 }
+	 </script>
+
+	<!-- パンくずリスト構造化データ -->
+	<script type="application/ld+json">
+	 {
+	   "@context": "https://schema.org",
+	   "@type": "BreadcrumbList",
+	   "itemListElement": [
+	     {
+	       "@type": "ListItem",
+	       "position": 1,
+	       "name": "ホーム",
+	       "item": "https://reiwagirls.co.jp/"
+	     },
+	     {
+	       "@type": "ListItem",
+	       "position": 2,
+	       "name": "お問い合わせ",
+	       "item": "https://reiwagirls.co.jp/contact.html"
+	     }
+	   ]
+	 }
+	 </script>
+
 	<link rel="stylesheet" href="css/header-basic.css">
 	<link rel="stylesheet" href="css/footer.css">
 	<link rel="stylesheet" href="css/page-transition.css">
@@ -154,7 +216,7 @@
 				<div class="footer-tags">
 					<a href="company.html">COMPANY</a>
 					<a href="service.html">SERVICE</a>
-					<a href="vision.html">VISION</a>
+					<a href="top.html">VISION</a>
 					<a href="recruit.html">RECRUIT</a>
 				</div>
 				<div class="footer-contact">
