--- a/recruit.html
+++ b/recruit.html
@@ -3,8 +3,78 @@
 
 <head>
 	<meta charset="UTF-8">
+	<title>採用情報｜株式会社令和ガールズ</title>
+	<meta name="description" content="株式会社令和ガールズの採用情報ページです。アイドル・ライバー・広報・事務など多彩な職種で募集中。夢を仕事に変える仲間を募集しています。">
+	<meta name="keywords" content="令和ガールズ, 採用, 求人, ライバー, アイドル, 広報, 事務, SNS運用, インフルエンサー支援">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Recruit Section</title>
+	<meta name="author" content="REIWAGIRLS Inc.">
+	<meta name="theme-color" content="#ffffff">
+
+	<!-- Canonical -->
+	<link rel="canonical" href="https://reiwagirls.co.jp/recruit.html">
+	<link rel="icon" href="/favicon.ico">
+
+	<!-- OGP -->
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="採用情報｜株式会社令和ガールズ">
+	<meta property="og:description" content="夢を仕事に。REIWAGIRLSではアイドル・ライバー・広報・事務などの仲間を募集しています。">
+	<meta property="og:url" content="https://reiwagirls.co.jp/recruit.html">
+	<meta property="og:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+
+	<!-- Twitterカード -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="採用情報｜株式会社令和ガールズ">
+	<meta name="twitter:description" content="多様な働き方と夢を支援。REIWAGIRLSの採用情報はこちら。">
+	<meta name="twitter:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+
+	<!-- 構造化データ Organization -->
+	<script type="application/ld+json">
+	  {
+	    "@context": "https://schema.org",
+	    "@type": "Organization",
+	    "name": "REIWAGIRLS Inc.",
+	    "url": "https://reiwagirls.co.jp",
+	    "logo": "https://reiwagirls.co.jp/img/reiwachan.png",
+	    "description": "インフルエンサー支援・SNS運用・アパレル制作などを行う株式会社令和ガールズの採用情報ページです。",
+	    "address": {
+	      "@type": "PostalAddress",
+	      "streetAddress": "西新宿8丁目14番19号 小林第二ビル8階",
+	      "addressLocality": "新宿区",
+	      "addressRegion": "東京都",
+	      "postalCode": "160-0023",
+	      "addressCountry": "JP"
+	    },
+	    "contactPoint": {
+	      "@type": "ContactPoint",
+	      "telephone": "+81-3-6824-2081",
+	      "contactType": "recruiting",
+	      "areaServed": "JP",
+	      "availableLanguage": ["Japanese"]
+	    }
+	  }
+	  </script>
+
+	<!-- パンくずリスト構造化データ -->
+	<script type="application/ld+json">
+	  {
+	    "@context": "https://schema.org",
+	    "@type": "BreadcrumbList",
+	    "itemListElement": [
+	      {
+	        "@type": "ListItem",
+	        "position": 1,
+	        "name": "ホーム",
+	        "item": "https://reiwagirls.co.jp/"
+	      },
+	      {
+	        "@type": "ListItem",
+	        "position": 2,
+	        "name": "採用情報",
+	        "item": "https://reiwagirls.co.jp/recruit.html"
+	      }
+	    ]
+	  }
+	  </script>
 	<link rel="stylesheet" href="css/recruit.css">
 	<link rel="stylesheet" href="css/footer.css">
 	<link rel="stylesheet" href="css/header-basic.css">
@@ -169,7 +239,7 @@
 				<div class="footer-tags">
 					<a href="company.html">COMPANY</a>
 					<a href="service.html">SERVICE</a>
-					<a href="vision.html">VISION</a>
+					<a href="top.html">VISION</a>
 					<a href="recruit.html">RECRUIT</a>
 				</div>
 				<div class="footer-contact">
