--- a/service.html
+++ b/service.html
@@ -3,8 +3,78 @@
 
 <head>
 	<meta charset="UTF-8">
+	<title>サービス一覧｜株式会社令和ガールズ</title>
+	<meta name="description" content="株式会社令和ガールズが提供するインフルエンサー支援、ライバー支援、アパレルプロデュースなど多角的なサービスをご紹介します。">
+	<meta name="keywords" content="令和ガールズ, サービス, インフルエンサー, SNS運用, ライバー支援, アパレルプロデュース, ブランド構築, マーケティング支援">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>サービスカード</title>
+	<meta name="author" content="REIWAGIRLS Inc.">
+	<meta name="theme-color" content="#ffffff">
+
+	<!-- Canonical -->
+	<link rel="canonical" href="https://reiwagirls.co.jp/service.html">
+	<link rel="icon" href="/favicon.ico">
+
+	<!-- OGP -->
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="サービス一覧｜株式会社令和ガールズ">
+	<meta property="og:description" content="インフルエンサー支援・ライバー育成・アパレルブランド構築など、REIWAGIRLSの多彩なサービスをご紹介します。">
+	<meta property="og:url" content="https://reiwagirls.co.jp/service.html">
+	<meta property="og:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+
+	<!-- Twitterカード -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="サービス一覧｜株式会社令和ガールズ">
+	<meta name="twitter:description" content="多様な業種のプロデュース支援を展開中。REIWAGIRLSのサービス詳細はこちら。">
+	<meta name="twitter:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+
+	<!-- 構造化データ Organization -->
+	<script type="application/ld+json">
+	  {
+	    "@context": "https://schema.org",
+	    "@type": "Organization",
+	    "name": "REIWAGIRLS Inc.",
+	    "url": "https://reiwagirls.co.jp",
+	    "logo": "https://reiwagirls.co.jp/img/reiwachan.png",
+	    "description": "インフルエンサー支援・SNS運用・アパレル制作などを行う株式会社令和ガールズのサービス紹介ページです。",
+	    "address": {
+	      "@type": "PostalAddress",
+	      "streetAddress": "西新宿8丁目14番19号 小林第二ビル8階",
+	      "addressLocality": "新宿区",
+	      "addressRegion": "東京都",
+	      "postalCode": "160-0023",
+	      "addressCountry": "JP"
+	    },
+	    "contactPoint": {
+	      "@type": "ContactPoint",
+	      "telephone": "+81-3-6824-2081",
+	      "contactType": "customer service",
+	      "areaServed": "JP",
+	      "availableLanguage": ["Japanese"]
+	    }
+	  }
+	  </script>
+
+	<!-- パンくずリスト構造化データ -->
+	<script type="application/ld+json">
+	  {
+	    "@context": "https://schema.org",
+	    "@type": "BreadcrumbList",
+	    "itemListElement": [
+	      {
+	        "@type": "ListItem",
+	        "position": 1,
+	        "name": "ホーム",
+	        "item": "https://reiwagirls.co.jp/"
+	      },
+	      {
+	        "@type": "ListItem",
+	        "position": 2,
+	        "name": "サービス一覧",
+	        "item": "https://reiwagirls.co.jp/service.html"
+	      }
+	    ]
+	  }
+	  </script>
 	<link rel="stylesheet" href="css/page-transition.css">
 	<link rel="stylesheet" href="css/service.css">
 	<link rel="stylesheet" href="css/footer.css">
