--- a/top.html
+++ b/top.html
@@ -3,7 +3,79 @@
 
 <head>
 	<meta charset="UTF-8">
+	<title>企業理念｜株式会社令和ガールズ</title>
+	<meta name="description" content="株式会社令和ガールズの企業理念・ミッション・価値観をご紹介します。未来を創造する情熱と想いを共有します。">
+	<meta name="keywords" content="令和ガールズ, 企業理念, ビジョン, ミッション, バリュー, 会社の想い, 価値観">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="author" content="REIWAGIRLS Inc.">
+	<meta name="theme-color" content="#ffffff">
+
+	<!-- Canonical -->
+	<link rel="canonical" href="https://reiwagirls.co.jp/top.html">
+	<link rel="icon" href="/favicon.ico">
+
+	<!-- OGP -->
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="企業理念｜株式会社令和ガールズ">
+	<meta property="og:description" content="令和ガールズの想いと価値観を形に。企業理念・ミッション・バリューをご紹介します。">
+	<meta property="og:url" content="https://reiwagirls.co.jp/top.html">
+	<meta property="og:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+
+	<!-- Twitterカード -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="企業理念｜株式会社令和ガールズ">
+	<meta name="twitter:description" content="未来を創造する企業、REIWAGIRLSの企業理念ページ。">
+	<meta name="twitter:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+
+	<!-- 構造化データ Organization -->
+	<script type="application/ld+json">
+	  {
+	    "@context": "https://schema.org",
+	    "@type": "Organization",
+	    "name": "REIWAGIRLS Inc.",
+	    "url": "https://reiwagirls.co.jp",
+	    "logo": "https://reiwagirls.co.jp/img/reiwachan.png",
+	    "description": "株式会社令和ガールズの企業理念・ミッション・バリューをご紹介するページです。",
+	    "address": {
+	      "@type": "PostalAddress",
+	      "streetAddress": "西新宿8丁目14番19号 小林第二ビル8階",
+	      "addressLocality": "新宿区",
+	      "addressRegion": "東京都",
+	      "postalCode": "160-0023",
+	      "addressCountry": "JP"
+	    },
+	    "contactPoint": {
+	      "@type": "ContactPoint",
+	      "telephone": "+81-3-6824-2081",
+	      "contactType": "customer service",
+	      "areaServed": "JP",
+	      "availableLanguage": ["Japanese"]
+	    }
+	  }
+	  </script>
+
+	<!-- パンくずリスト構造化データ -->
+	<script type="application/ld+json">
+	  {
+	    "@context": "https://schema.org",
+	    "@type": "BreadcrumbList",
+	    "itemListElement": [
+	      {
+	        "@type": "ListItem",
+	        "position": 1,
+	        "name": "ホーム",
+	        "item": "https://reiwagirls.co.jp/"
+	      },
+	      {
+	        "@type": "ListItem",
+	        "position": 2,
+	        "name": "企業理念",
+	        "item": "https://reiwagirls.co.jp/top.html"
+	      }
+	    ]
+	  }
+	  </script>
+
 	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
@@ -204,7 +276,7 @@
 				<div class="footer-tags">
 					<a href="company.html">COMPANY</a>
 					<a href="service.html">SERVICE</a>
-					<a href="vision.html">VISION</a>
+					<a href="top.html">VISION</a>
 					<a href="recruit.html">RECRUIT</a>
 				</div>
 				<div class="footer-contact">
