--- a/company.html
+++ b/company.html
@@ -3,8 +3,79 @@
 
 <head>
 	<meta charset="UTF-8">
+	<title>会社概要｜株式会社令和ガールズ</title>
+	<meta name="description" content="株式会社令和ガールズの会社概要ページです。所在地、設立日、事業内容など、企業情報をご紹介しています。SNS運用・アパレル制作など幅広い分野で展開。">
+	<meta name="keywords" content="令和ガールズ, 会社概要, 企業情報, SNS運用代行, アパレル制作, インフルエンサー支援, モデルキャスティング">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>お問い合わせ</title>
+	<meta name="author" content="REIWAGIRLS Inc.">
+	<meta name="theme-color" content="#ffffff">
+
+	<!-- Canonical -->
+	<link rel="canonical" href="https://reiwagirls.co.jp/company.html">
+	<link rel="icon" href="/favicon.ico">
+
+	<!-- OGP -->
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="会社概要｜株式会社令和ガールズ">
+	<meta property="og:description" content="株式会社令和ガールズの企業情報を紹介。SNS運用やアパレルブランド支援など多角的に展開。">
+	<meta property="og:url" content="https://reiwagirls.co.jp/company.html">
+	<meta property="og:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+
+	<!-- Twitterカード -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="会社概要｜株式会社令和ガールズ">
+	<meta name="twitter:description" content="令和ガールズの会社情報ページ。事業内容、設立、所在地をご確認いただけます。">
+	<meta name="twitter:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+
+	<!-- 構造化データ Organization -->
+	<script type="application/ld+json">
+	  {
+	    "@context": "https://schema.org",
+	    "@type": "Organization",
+	    "name": "REIWAGIRLS Inc.",
+	    "url": "https://reiwagirls.co.jp",
+	    "logo": "https://reiwagirls.co.jp/img/reiwachan.png",
+	    "description": "SNS運用代行、ライバー育成、アパレルプロデュースを展開する株式会社令和ガールズの会社概要ページです。",
+	    "address": {
+	      "@type": "PostalAddress",
+	      "streetAddress": "西新宿8丁目14番19号 小林第二ビル8階",
+	      "addressLocality": "新宿区",
+	      "addressRegion": "東京都",
+	      "postalCode": "160-0023",
+	      "addressCountry": "JP"
+	    },
+	    "contactPoint": {
+	      "@type": "ContactPoint",
+	      "telephone": "+81-3-6824-2081",
+	      "contactType": "customer support",
+	      "areaServed": "JP",
+	      "availableLanguage": ["Japanese"]
+	    }
+	  }
+	  </script>
+
+	<!-- パンくずリスト構造化データ -->
+	<script type="application/ld+json">
+	  {
+	    "@context": "https://schema.org",
+	    "@type": "BreadcrumbList",
+	    "itemListElement": [
+	      {
+	        "@type": "ListItem",
+	        "position": 1,
+	        "name": "ホーム",
+	        "item": "https://reiwagirls.co.jp/"
+	      },
+	      {
+	        "@type": "ListItem",
+	        "position": 2,
+	        "name": "会社概要",
+	        "item": "https://reiwagirls.co.jp/company.html"
+	      }
+	    ]
+	  }
+	  </script>
+
 	<link rel="stylesheet" href="css/header-basic.css">
 	<link rel="stylesheet" href="css/footer.css">
 	<link rel="stylesheet" href="css/page-transition.css">
@@ -238,7 +309,7 @@
 				<div class="footer-tags">
 					<a href="company.html">COMPANY</a>
 					<a href="service.html">SERVICE</a>
-					<a href="vision.html">VISION</a>
+					<a href="top.html">VISION</a>
 					<a href="recruit.html">RECRUIT</a>
 				</div>
 				<div class="footer-contact">
