--- a/index.html
+++ b/index.html
@@ -3,8 +3,108 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>滑らか3列スクロール</title>
+	<title>令和ガールズ｜SNS運用・インフルエンサー支援・アパレル制作</title>
+	<meta name="description" content="REIWAGIRLSはSNS運用代行、モデルキャスティング、アパレルブランド制作などを通じて、女性の“好き”を仕事に変えるサポートを行うプロデュース企業です。">
+	<meta name="keywords" content="令和ガールズ, SNS運用代行, インフルエンサー支援, モデルキャスティング, アパレル制作, ライブ配信, PR案件">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="author" content="REIWAGIRLS Inc.">
+	<meta name="theme-color" content="#ffffff">
+
+	<!-- Canonical -->
+	<link rel="canonical" href="https://reiwagirls.co.jp/">
+	<link rel="icon" href="/favicon.ico">
+
+	<!-- OGP -->
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="令和ガールズ｜SNS運用・インフルエンサー支援・アパレル制作">
+	<meta property="og:description" content="夢をカタチに。SNS時代のブランド支援を令和ガールズがサポート。">
+	<meta property="og:url" content="https://reiwagirls.co.jp/">
+	<meta property="og:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+
+	<!-- Twitterカード -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="令和ガールズ｜SNS運用・インフルエンサー支援・アパレル制作">
+	<meta name="twitter:description" content="SNSマーケティングとブランディングを一貫してサポートする企業です。">
+	<meta name="twitter:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+
+	<!-- Google構造化データ Organization -->
+	<script type="application/ld+json">
+	  {
+	    "@context": "https://schema.org",
+	    "@type": "Organization",
+	    "name": "REIWAGIRLS Inc.",
+	    "url": "https://reiwagirls.co.jp",
+	    "logo": "https://reiwagirls.co.jp/img/reiwachan.png",
+	    "description": "SNS運用・インフルエンサー支援・アパレルプロデュースを行う企業",
+	    "address": {
+	      "@type": "PostalAddress",
+	      "streetAddress": "西新宿8丁目14番19号 小林第二ビル8階",
+	      "addressLocality": "新宿区",
+	      "addressRegion": "東京都",
+	      "postalCode": "160-0023",
+	      "addressCountry": "JP"
+	    },
+	    "contactPoint": {
+	      "@type": "ContactPoint",
+	      "telephone": "+81-3-6824-2081",
+	      "contactType": "customer support",
+	      "areaServed": "JP"
+	    },
+	    "sameAs": [
+	      "https://www.instagram.com/youraccount",
+	      "https://line.me/ti/p/yourlineid"
+	    ]
+	  }
+	  </script>
+
+	<!-- JSON-LD パンくずリスト例 -->
+	<script type="application/ld+json">
+	  {
+	    "@context": "https://schema.org",
+	    "@type": "BreadcrumbList",
+	    "itemListElement": [
+	      {
+	        "@type": "ListItem",
+	        "position": 1,
+	        "name": "ホーム",
+	        "item": "https://reiwagirls.co.jp/"
+	      },
+	      {
+	        "@type": "ListItem",
+	        "position": 2,
+	        "name": "サービス",
+	        "item": "https://reiwagirls.co.jp/service.html"
+	      }
+	    ]
+	  }
+	  </script>
+
+	<!-- JSON-LD FAQ例 -->
+	<script type="application/ld+json">
+	  {
+	    "@context": "https://schema.org",
+	    "@type": "FAQPage",
+	    "mainEntity": [
+	      {
+	        "@type": "Question",
+	        "name": "インフルエンサー案件は誰でも参加できますか？",
+	        "acceptedAnswer": {
+	          "@type": "Answer",
+	          "text": "はい、18歳以上の女性であればどなたでもご登録・参加いただけます。"
+	        }
+	      },
+	      {
+	        "@type": "Question",
+	        "name": "どんな企業と提携していますか？",
+	        "acceptedAnswer": {
+	          "@type": "Answer",
+	          "text": "大手アパレルブランドからPR案件まで、幅広く実績があります。"
+	        }
+	      }
+	    ]
+	  }
+	  </script>
+
 	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="css/function.css">
 	<link rel="stylesheet" href="css/animation.css">
@@ -269,6 +369,11 @@
 		</div>
 
 		<section class="service-hero theme-blue-text" id="section1">
+			<section class="about-service">
+				<h2>REIWAGIRLSの提供サービス</h2>
+				<p>インフルエンサーのキャスティング、SNSの企画・運用代行、アパレルブランド立ち上げ支援、ライブ配信・PR案件獲得支援などを行っています。</p>
+			</section>
+
 			<div class="service-inner">
 				<h1 data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
 					<span>心を動かすSNSコンテンツ</span><br><span class="service-title">企画・運用代行</span>
@@ -366,7 +471,7 @@
 				<div class="footer-tags">
 					<a href="company.html">COMPANY</a>
 					<a href="service.html">SERVICE</a>
-					<a href="vision.html">VISION</a>
+					<a href="top.html">VISION</a>
 					<a href="recruit.html">RECRUIT</a>
 				</div>
 				<div class="footer-contact">
@@ -555,7 +660,6 @@
 
 	</script>
 	<div id="scroll-locker"></div>
-
 
 </body>
 
