--- a/service.html
+++ b/service.html
@@ -244,7 +244,7 @@
 					<hr>
 
 					<!-- 統計データ -->
-					<img src="img/hub_statistics.jpg" alt="インフルエンサー統計データ" class="modal-influencehub-image">
+					<img src="img/hub_statistics.png" alt="インフルエンサー統計データ" class="modal-influencehub-image">
 
 					<p>
 						年齢・地域・フォロワー属性まで幅広くカバー。<br>
@@ -266,7 +266,7 @@
 					<!--					<hr>-->
 
 					<h3>提供サービス・料金プラン</h3>
-					<img src="img/hub_planDetail.jpg" alt="インフルエンサー実績" class="modal-influencehub-image">
+					<img src="img/hub_planDetail.png" alt="インフルエンサー実績" class="modal-influencehub-image">
 
 					<p>
 						月額基本料金：<strong>200,000円〜300,000円（税抜）</strong><br>
