--- a/company.html
+++ b/company.html
@@ -152,7 +152,7 @@
 				<!-- 2個目 -->
 				<div class="company-service-item reverse">
 					<div class="company-service-image" data-aos="zoom-in" data-aos-duration="600">
-						<img src="img/liver.jpg" alt="ライバー育成">
+						<img src="img/livers.jpg" alt="ライバー育成">
 					</div>
 					<div class="company-service-text">
 						<h4 class="company-service-category" data-aos="fade-right" data-aos-delay="100">Creative -</h4>
@@ -346,8 +346,8 @@
 				<div class="footer-nav">
 					<a href="index.html">Top</a>
 					<a href="contact.html">Contact</a>
-					<a href="#">Line</a>
-					<a href="#">Instagram</a>
+					<a href="https://page.line.me/fhy3551i?openQrModal=true">Line</a>
+					<a href="https://www.instagram.com/reiwa_girls_official_/">Instagram</a>
 				</div>
 
 				<div class="footer-address">
