--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
 			<div class="catch-copy_container">
 				<h2 class="catch-sub">あなたの “発信” は<br>価値になる</h2>
-				<button class="badge-button"><span>令和ガールズの目指す世界</span></button>
+				<a href="top.html" class="badge-button"><span>令和ガールズの目指す世界</span></a>
 			</div>
 
 			<div class="services">
@@ -370,8 +370,8 @@
 
 		<section class="service-hero theme-blue-text" id="section1">
 			<section class="about-service">
-				<h2>REIWAGIRLSの提供サービス</h2>
-				<p>インフルエンサーのキャスティング、SNSの企画・運用代行、アパレルブランド立ち上げ支援、ライブ配信・PR案件獲得支援などを行っています。</p>
+				<h2 class="reiwaGirls-serviceContent-title">令和GIRLSの提供サービス</h2>
+				<p style="display: none;">インフルエンサーのキャスティング、SNSの企画・運用代行、アパレルブランド立ち上げ支援、ライブ配信・PR案件獲得支援などを行っています。</p style="display: none;">
 			</section>
 
 			<div class="service-inner">
@@ -382,7 +382,7 @@
 				<!--					私たちはSNSに特化したノウハウで、<br>クライアントの想いを形にします。</p>-->
 				<p data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" class="description">
 					アカウント運用・フォロワー獲得・ブランド認知──<br>“バズらせたい”ではなく、“伝わる”コンテンツを。</p>
-				<a data-aos="fade" data-aos-delay="300" data-aos-duration="1000" href="#"
+				<a data-aos="fade" data-aos-delay="300" data-aos-duration="1000" href="service.html"
 					class="service-button theme-blue-text">詳しくはこちら</a>
 			</div>
 		</section>
@@ -396,7 +396,7 @@
 				<!--					デザイン・映像・写真などを通じて、<br>一貫した印象とメッセージを届けます。 </p>-->
 				<p data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" class="description">
 					世界観に共感が生まれる時代。<br>ビジュアルから空気感まで設計します。</p>
-				<a data-aos="fade" data-aos-delay="300" data-aos-duration="1000" href="#"
+				<a data-aos="fade" data-aos-delay="300" data-aos-duration="1000" href="service.html"
 					class="service-button theme-red-text">詳しくはこちら</a>
 			</div>
 		</section>
@@ -410,7 +410,7 @@
 				<!--					目標設定、戦略立案、広告運用、分析──<br>すべてをワンストップで支援します。</p>-->
 				<p data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" class="description">
 					数字も、ストーリーも、届け方も。<br>全方位からブランドを育てます。</p>
-				<a data-aos="fade" data-aos-delay="300" data-aos-duration="1000" href="#"
+				<a data-aos="fade" data-aos-delay="300" data-aos-duration="1000" href="service.html"
 					class="service-button theme-purple-text">詳しくはこちら</a>
 			</div>
 		</section>
@@ -423,7 +423,7 @@
 				<!--					企画・イメージに合う最適なモデルを提案。<br>オーディションからマネジメントまで対応します。</p>-->
 				<p data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" class="description">
 					撮影・広告・イベントなど、<br>あらゆるシーンにふさわしいキャスティングをご提供。</p>
-				<a data-aos="fade" data-aos-delay="300" data-aos-duration="1000" href="#"
+				<a data-aos="fade" data-aos-delay="300" data-aos-duration="1000" href="service.html"
 					class="service-button theme-green-text">詳しくはこちら</a>
 			</div>
 		</section>
@@ -441,7 +441,7 @@
 					“売れる”よりも、“選ばれる”存在へ。<br>
 					夜の世界に映える、ブランドジュエルを形にします。
 				</p>
-				<a data-aos="fade" data-aos-delay="300" data-aos-duration="1000" href="#"
+				<a data-aos="fade" data-aos-delay="300" data-aos-duration="1000" href="service.html"
 					class="service-button theme-gold-text">詳しくはこちら</a>
 			</div>
 		</section>
@@ -455,7 +455,7 @@
 				<!--					コンセプト設計・ロゴ・アイテム展開まで、<br>ブランド立ち上げをトータルで支援します。</p>-->
 				<p data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" class="description">
 					想いや個性を“着れるデザイン”へ。<br>感性に寄り添ったブランドづくりをお手伝いします。</p>
-				<a data-aos="fade" data-aos-delay="300" data-aos-duration="1000" href="#"
+				<a data-aos="fade" data-aos-delay="300" data-aos-duration="1000" href="service.html"
 					class="service-button theme-yellow-text">詳しくはこちら</a>
 			</div>
 		</section>
@@ -508,8 +508,8 @@
 				<div class="footer-nav">
 					<a href="index.html">Top</a>
 					<a href="contact.html">Contact</a>
-					<a href="#">Line</a>
-					<a href="#">Instagram</a>
+					<a href="https://page.line.me/fhy3551i?openQrModal=true">Line</a>
+					<a href="https://www.instagram.com/reiwa_girls_official_/">Instagram</a>
 				</div>
 
 				<div class="footer-address">
