--- a/recruit.html
+++ b/recruit.html
@@ -136,47 +136,52 @@
 		</div>
 
 		<div class="recruit-tab-buttons">
-			<button class="recruit-tab-button active" data-tab="idol">アイドル</button>
-			<button class="recruit-tab-button" data-tab="liver">ライバー</button>
-			<button class="recruit-tab-button" data-tab="office">事務</button>
-			<button class="recruit-tab-button" data-tab="pr">広報</button>
+			<button class="recruit-tab-button active" data-tab="idol">採用体制準備中・・・</button>
+<!--			<button class="recruit-tab-button active" data-tab="idol">アイドル</button>-->
+<!--			<button class="recruit-tab-button" data-tab="liver">ライバー</button>-->
+<!--			<button class="recruit-tab-button" data-tab="office">事務</button>-->
+<!--			<button class="recruit-tab-button" data-tab="pr">広報</button>-->
 		</div>
 
 		<div id="idol" class="recruit-tab-content active">
-			<p><strong>給与</strong><br>完全歩合制（月収例：40万円〜150万円）＋成果ボーナス</p>
-			<p><strong>諸手当詳細</strong><br>交通費補助：上限20,000円/月、撮影衣装補助あり</p>
-			<p><strong>昇給賞与</strong><br>成果評価により随時昇給・特別ボーナス支給あり</p>
-			<p><strong>就業時間</strong><br>シフト制（週3日〜、1日4時間〜応相談）</p>
-			<p><strong>休日休暇</strong><br>希望シフト制／オフ日は本人希望による</p>
-			<p><strong>福利厚生</strong><br>メディア出演支援・撮影機材貸与・SNS運用サポート・レッスン制度</p>
+			<p>ただいま、採用準備中です。</p>
 		</div>
 
-		<div id="liver" class="recruit-tab-content">
-			<p><strong>給与</strong><br>月額報酬：基本歩合制（配信成果に応じて変動）<br>＋月間ボーナス（上限なし）</p>
-			<p><strong>諸手当詳細</strong><br>配信機材貸与・Wi-Fi通信補助・エージェント伴走あり</p>
-			<p><strong>昇給賞与</strong><br>実績次第で配信インセンティブUP／特別手当あり</p>
-			<p><strong>就業時間</strong><br>自由（自己裁量）※推奨：週15時間以上</p>
-			<p><strong>休日休暇</strong><br>完全自由／個人スケジュールに準ずる</p>
-			<p><strong>福利厚生</strong><br>ライバー育成支援・SNS拡散支援・報酬前払い制度・コラボ紹介あり</p>
-		</div>
+		<!--		<div id="idol" class="recruit-tab-content active">-->
+		<!--			<p><strong>給与</strong><br>完全歩合制（月収例：40万円〜150万円）＋成果ボーナス</p>-->
+		<!--			<p><strong>諸手当詳細</strong><br>交通費補助：上限20,000円/月、撮影衣装補助あり</p>-->
+		<!--			<p><strong>昇給賞与</strong><br>成果評価により随時昇給・特別ボーナス支給あり</p>-->
+		<!--			<p><strong>就業時間</strong><br>シフト制（週3日〜、1日4時間〜応相談）</p>-->
+		<!--			<p><strong>休日休暇</strong><br>希望シフト制／オフ日は本人希望による</p>-->
+		<!--			<p><strong>福利厚生</strong><br>メディア出演支援・撮影機材貸与・SNS運用サポート・レッスン制度</p>-->
+		<!--		</div>-->
 
-		<div id="office" class="recruit-tab-content">
-			<p><strong>給与</strong><br>月給：254,300円（基本月額：220,300円、諸手当：34,000円）</p>
-			<p><strong>諸手当詳細</strong><br>住宅手当：15,000円／食事補助：5,000円／通勤手当：実費支給</p>
-			<p><strong>昇給賞与</strong><br>年1回昇給（7月）<br>年2回賞与（6月、12月）</p>
-			<p><strong>就業時間</strong><br>9:30〜18:00（休憩1時間）</p>
-			<p><strong>休日休暇</strong><br>完全週休2日制（土日）／祝日／年末年始休暇／夏季休暇（5日）</p>
-			<p><strong>福利厚生</strong><br>社会保険完備／社内研修制度／健康診断／私服勤務OK</p>
-		</div>
+		<!--		<div id="liver" class="recruit-tab-content">-->
+		<!--			<p><strong>給与</strong><br>月額報酬：基本歩合制（配信成果に応じて変動）<br>＋月間ボーナス（上限なし）</p>-->
+		<!--			<p><strong>諸手当詳細</strong><br>配信機材貸与・Wi-Fi通信補助・エージェント伴走あり</p>-->
+		<!--			<p><strong>昇給賞与</strong><br>実績次第で配信インセンティブUP／特別手当あり</p>-->
+		<!--			<p><strong>就業時間</strong><br>自由（自己裁量）※推奨：週15時間以上</p>-->
+		<!--			<p><strong>休日休暇</strong><br>完全自由／個人スケジュールに準ずる</p>-->
+		<!--			<p><strong>福利厚生</strong><br>ライバー育成支援・SNS拡散支援・報酬前払い制度・コラボ紹介あり</p>-->
+		<!--		</div>-->
 
-		<div id="pr" class="recruit-tab-content">
-			<p><strong>給与</strong><br>月給：278,300円（基本月額：244,300円、諸手当：34,000円）</p>
-			<p><strong>諸手当詳細</strong><br>SNS手当：10,000円／住宅手当：15,000円／通勤手当：上限20,000円</p>
-			<p><strong>昇給賞与</strong><br>実績に応じた年1回昇給＋評価型年2回賞与</p>
-			<p><strong>就業時間</strong><br>10:00〜19:00（フレックスタイム制／コアタイム：11:00〜16:00）</p>
-			<p><strong>休日休暇</strong><br>週休2日制（土日祝）／年間休日120日以上／リフレッシュ休暇</p>
-			<p><strong>福利厚生</strong><br>広報活動費支給／推奨書籍購入補助／副業OK／オンライン研修支援</p>
-		</div>
+		<!--		<div id="office" class="recruit-tab-content">-->
+		<!--			<p><strong>給与</strong><br>月給：254,300円（基本月額：220,300円、諸手当：34,000円）</p>-->
+		<!--			<p><strong>諸手当詳細</strong><br>住宅手当：15,000円／食事補助：5,000円／通勤手当：実費支給</p>-->
+		<!--			<p><strong>昇給賞与</strong><br>年1回昇給（7月）<br>年2回賞与（6月、12月）</p>-->
+		<!--			<p><strong>就業時間</strong><br>9:30〜18:00（休憩1時間）</p>-->
+		<!--			<p><strong>休日休暇</strong><br>完全週休2日制（土日）／祝日／年末年始休暇／夏季休暇（5日）</p>-->
+		<!--			<p><strong>福利厚生</strong><br>社会保険完備／社内研修制度／健康診断／私服勤務OK</p>-->
+		<!--		</div>-->
+
+		<!--		<div id="pr" class="recruit-tab-content">-->
+		<!--			<p><strong>給与</strong><br>月給：278,300円（基本月額：244,300円、諸手当：34,000円）</p>-->
+		<!--			<p><strong>諸手当詳細</strong><br>SNS手当：10,000円／住宅手当：15,000円／通勤手当：上限20,000円</p>-->
+		<!--			<p><strong>昇給賞与</strong><br>実績に応じた年1回昇給＋評価型年2回賞与</p>-->
+		<!--			<p><strong>就業時間</strong><br>10:00〜19:00（フレックスタイム制／コアタイム：11:00〜16:00）</p>-->
+		<!--			<p><strong>休日休暇</strong><br>週休2日制（土日祝）／年間休日120日以上／リフレッシュ休暇</p>-->
+		<!--			<p><strong>福利厚生</strong><br>広報活動費支給／推奨書籍購入補助／副業OK／オンライン研修支援</p>-->
+		<!--		</div>-->
 
 		<div class="recruit-second-title">
 			<h2 class="recruit-second-title-title">SELECTION PROCESS</h2>
@@ -276,8 +281,8 @@
 				<div class="footer-nav">
 					<a href="index.html">Top</a>
 					<a href="contact.html">Contact</a>
-					<a href="#">Line</a>
-					<a href="#">Instagram</a>
+					<a href="https://page.line.me/fhy3551i?openQrModal=true">Line</a>
+					<a href="https://www.instagram.com/reiwa_girls_official_/">Instagram</a>
 				</div>
 
 				<div class="footer-address">
