--- a/service.html
+++ b/service.html
@@ -170,7 +170,6 @@
 					<div class="detail-button__container">
 						<button id="openInfluenceHubModal" class="service-detail__button">詳細を見る</button>
 					</div>
-
 				</div>
 				<div class="card">
 					<h3>ライバー支援</h3>
@@ -178,10 +177,9 @@
 					<p class="card-grid__catchcopy">個性が光る、ライブ戦略</p>
 					<p class="card-grid__text">“あなた”にしかない個性で、ライブ配信での存在感を育てるプロデュース&マネージメントプログラム。</p>
 					<div class="detail-button__container">
-						<a class="service-detail__button"
-							href="https://prtimes.jp/main/html/rd/p/000000001.000109231.html">詳細はこちら</a>
-						<a class="service-detail__button"
-							href="https://prtimes.jp/main/html/rd/p/000000001.000109231.html">タレント一覧</a>
+						<button id="openNextStarsModal" class="service-detail__button">詳細はこちら</button>
+						<!--						<a class="service-detail__button"-->
+						<!--							href="https://prtimes.jp/main/html/rd/p/000000001.000109231.html">タレント一覧</a>-->
 					</div>
 				</div>
 				<div class="card">
@@ -198,14 +196,38 @@
 					<h3>アパレルブランド支援</h3>
 					<img src="img_logo/MonMaisonLogo.jpg" alt="Mon Maison">
 					<p class="card-grid__catchcopy">美容識をまとう<br>選ばれるブランドへ</p>
-					<p class="card-grid__text">感性に寄り添った世界観とファッションブランドを軸にトータルプロデュースします。</p>
+					<p class="card-grid__text">感性に寄り添った世界観とファッションブランドを軸にトータルプロデュース。</p>
 					<div class="detail-button__container">
 						<a class="service-detail__button"
 							href="https://prtimes.jp/main/html/rd/p/000000001.000109231.html">記事はこちら</a>
 						<a id="openModal" class="service-detail__button">詳細はこちら</a>
 					</div>
-
 				</div>
+				<!-- サービスカード(SNS運用代行) -->
+				<div class="card">
+					<h3>SNS運用代行</h3>
+					<img src="img/sns_support_top.jpg" alt="SNS Support">
+					<p class="card-grid__catchcopy">共感と数値を両立する<br>オリジナルのSNS戦略</p>
+					<p class="card-grid__text">クリエイティブ投稿、設計から運用改善まで、<br>全て一括代行するSNSマーケティング。</p>
+					<div class="detail-button__container">
+						<a id="openSNSModal" class="service-detail__button">詳細はこちら</a>
+					</div>
+				</div>
+				<!-- サービスカード(モデルプロデュース) -->
+				<div class="card">
+					<h3>モデルプロデュース</h3>
+					<img src="img_backTalent/28.png" alt="Model Produce">
+					<p class="card-grid__catchcopy">"なりたい"を叶える<br>本格プロデュース支援</p>
+					<p class="card-grid__text">
+						撮影・ブランディング・SNS連携まで、<br>
+						モデルとして輝くためのトータルサポート。
+					</p>
+					<div class="detail-button__container">
+						<a id="openModelProduceModal" class="service-detail__button">詳細はこちら</a>
+					</div>
+				</div>
+
+
 			</div>
 			<p class="service-last-text">未来を変える一歩を、今ここから。<br>あなたの想いが、世界を動かす力になると、私たちは信じています。</p>
 
@@ -305,6 +327,86 @@
 
 				</div>
 			</div>
+
+			<div id="popupNextStarsModal" class="modal-NextStars">
+				<div class="modal-NextStars-content">
+					<span id="closeNextStarsModal" class="close-NextStars-button">&times;</span>
+
+					<!-- トップ画像 -->
+					<img src="img/NextStars_top.jpg" alt="NextStars概要" class="modal-NextStars-image">
+
+					<h2>ライブ配信で夢を叶える。<br>【NextStars】</h2>
+
+					<p><strong>株式会社令和ガールズ</strong>｜2023年最新版</p>
+
+					<p>
+						NextStarsは、TikTokライブに特化したライバー支援プログラム。<br>
+						専属マネージャーによる運営サポート、イベント、撮影、PR案件など<br>
+						成長を後押しする支援体制を整えています。
+					</p>
+
+					<hr>
+
+					<h3>提供サポート</h3>
+					<ul>
+						<li>専属マネージャーによるLINEサポート・面談（隔週）</li>
+						<li>撮影会・HP掲載・配信スペース利用</li>
+						<li>アパレルブランドスポンサー提供（配信衣装）</li>
+						<li>有償PR案件の提供</li>
+						<li>豪華景品付きの限定イベント参加権</li>
+					</ul>
+
+					<img src="img/nextstars_support.jpg" alt="NextStarsのサポート体制" class="modal-NextStars-image">
+
+					<p>
+						<strong>月30時間以上の配信実績</strong>で、最新アパレル商品の提供やイベント招待など多彩な特典を受けられます。
+					</p>
+
+					<hr>
+
+					<h3>実績例（月収）</h3>
+					<ul>
+						<li>30代女性（3ヶ月目）：100,000円（30〜35h/月）</li>
+						<li>40代女性（11ヶ月目）：250,000円（80〜90h/月）</li>
+						<li>20代女性（9ヶ月目）：1,000,000円（150〜170h/月）</li>
+					</ul>
+
+					<hr>
+
+					<h3>活動開始までの流れ</h3>
+					<ul>
+						<li>事務所との契約</li>
+						<li>テスト配信（3回以上）</li>
+						<li>配信権限の取得申請</li>
+						<li>専用コードの発行・事務所登録</li>
+						<li>ライブ配信開始 → 報酬獲得</li>
+					</ul>
+
+					<img src="img/nextstars_flow1.jpg" alt="NextStars登録の流れ" class="modal-NextStars-image">
+					<img src="img/nextstars_flow2.jpg" alt="NextStars登録の流れ" class="modal-NextStars-image">
+
+					<hr>
+
+					<h3>お問い合わせ・詳細</h3>
+					<p><a href="https://lin.ee/BNNecfR" target="_blank"><strong>公式LINE＠はこちら</strong></a></p>
+
+					<h3>株式会社令和ガールズ 概要</h3>
+					<ul>
+						<li>会社名：株式会社令和ガールズ</li>
+						<li>代表取締役：室井涼介</li>
+						<li>所在地：<br>
+							新宿オフィス：〒160-0022 東京都新宿区西新宿8-14-19 小林第二ビル8階<br>
+							新宿営業所：〒163-0604 東京都新宿区西新宿1丁目25番地 新宿センタービル49階
+						</li>
+						<li>公式サイト：<a href="https://www.reiwagirls.com/" target="_blank">https://www.reiwagirls.com/</a>
+						</li>
+						<li>公式Instagram：<a href="https://www.instagram.com/reiwa_girls_official/"
+								target="_blank">@reiwa_girls_official</a></li>
+						<li>公式LINE＠：<a href="https://lin.ee/BNNecfR" target="_blank">https://lin.ee/BNNecfR</a></li>
+					</ul>
+				</div>
+			</div>
+
 
 			<!-- ポップアップ(ボトルビジュー) -->
 			<div id="popupVotreBijouModal" class="modal-votrebijou">
@@ -490,6 +592,151 @@
 				</div>
 			</div>
 
+			<!-- ポップアップ(SNS運用代行) -->
+			<div id="popupSNSModal" class="modal-SNS">
+				<div class="modal-influencehub-content">
+					<span id="closeSNSModal" class="close-SNS-button">&times;</span>
+
+					<!-- トップ画像 -->
+					<img src="img/sns_support_top.jpg" alt="SNS運用代行概要" class="modal-SNS-image">
+
+					<h2>戦略から投稿、分析まで。<br>【SNS運用代行サービス】</h2>
+
+					<p><strong>株式会社令和ガールズ</strong>｜2023年最新</p>
+
+					<p>
+						SNS時代に求められる「魅せる力」と「届ける力」。<br>
+						令和ガールズの<strong>SNS運用代行</strong>は、
+						企画・投稿制作・数値分析・改善提案まで、<br>
+						ワンストップで実現するプロフェッショナルサービスです。
+					</p>
+
+					<hr>
+
+					<h3>サービス内容</h3>
+
+					<ul>
+						<li>アカウント設計・世界観構築</li>
+						<li>投稿スケジュール作成・運用代行</li>
+						<li>画像・動画コンテンツ制作</li>
+						<li>ハッシュタグ・アルゴリズム最適化</li>
+						<li>インサイト分析・レポーティング</li>
+					</ul>
+
+					<img src="img/sns_support_flow.jpg" alt="SNS運用の流れ" class="modal-SNS-image">
+
+					<p>
+						多様な業種・ブランドに対応し、<br>
+						Instagram／TikTok／Twitter（X）／YouTubeなど各SNSに最適化した投稿設計が可能です。
+					</p>
+
+					<hr>
+
+					<h3>料金プラン</h3>
+
+					<p>
+						月額基本料金：<strong>150,000円〜（税抜）</strong><br>
+						※投稿本数・SNS種別・戦略設計の有無により変動
+					</p>
+
+					<img src="img/sns_plan.jpg" alt="SNS料金プラン" class="modal-SNS-image">
+
+					<hr>
+
+					<h3>お問い合わせ・詳細</h3>
+
+					<p><a href="https://lin.ee/BNNecfR" target="_blank"><strong>公式LINE＠はこちら</strong></a></p>
+
+					<h3>株式会社令和ガールズ 概要</h3>
+
+					<ul>
+						<li>会社名：株式会社令和ガールズ</li>
+						<li>代表取締役：室井涼介</li>
+						<li>所在地：<br>
+							新宿オフィス：〒160-0022 東京都新宿区西新宿8-14-19 小林第二ビル8階<br>
+							新宿営業所：〒163-0604 東京都新宿区西新宿1丁目25番地 新宿センタービル49階
+						</li>
+						<li>公式サイト：<a href="https://www.reiwagirls.com/" target="_blank">https://www.reiwagirls.com/</a>
+						</li>
+						<li>公式Instagram：<a href="https://www.instagram.com/reiwa_girls_official/"
+								target="_blank">@reiwa_girls_official</a></li>
+						<li>公式LINE＠：<a href="https://lin.ee/BNNecfR" target="_blank">https://lin.ee/BNNecfR</a></li>
+					</ul>
+				</div>
+			</div>
+			<!-- モーダル(モデルプロデュース) -->
+			<div id="popupModelProduceModal" class="modal-ModelProduce">
+				<div class="modal-influencehub-content">
+					<span id="closeModelProduceModal" class="close-ModelProduce-button">&times;</span>
+
+					<h2>“なりたい”をプロデュースする。<br>【モデルプロデュース事業】</h2>
+
+					<p><strong>株式会社令和ガールズ</strong>｜2025年スタート</p>
+
+					<p>
+						モデルとして「選ばれる存在」になるために。<br>
+						令和ガールズでは、夢と実績を両立するモデル育成・輩出の仕組みを構築中です。<br>
+						強みは、SNS拡散力、撮影環境、そして実践ベースのブランディング支援。
+					</p>
+
+					<hr>
+
+					<h3>サービス内容</h3>
+					<ul>
+						<li>個別カウンセリング・方向性設計</li>
+						<li>スタジオ・屋外でのプロフィール撮影</li>
+						<li>ビジュアルブランディング指導</li>
+						<li>ポートフォリオ構築／推薦・案件連携</li>
+						<li>SNSでの戦略的露出支援</li>
+					</ul>
+
+					<p>
+						「ファッション」「美容」「芸能」など、目指す方向性に合わせて専門チームが並走。<br>
+						“憧れ”を実現に変えるサポート体制を構築中です。
+					</p>
+
+					<hr>
+
+					<h3>導入対象</h3>
+					<ul>
+						<li>芸能活動にチャレンジしたい10〜30代女性</li>
+						<li>撮影・SNS強化を通じて自分の価値を高めたい方</li>
+						<li>将来モデルやインフルエンサーとして活動したい方</li>
+						<li>自己ブランディングのきっかけが欲しい方</li>
+					</ul>
+
+					<hr>
+
+					<h3>参加形式</h3>
+					<p>
+						週1〜月2回のオフライン・オンライン形式でのプロデュース。<br>
+						選考制（LINE登録後、面談あり）となっております。
+					</p>
+
+					<hr>
+
+					<h3>お問い合わせ・詳細</h3>
+					<p><a href="https://lin.ee/BNNecfR" target="_blank"><strong>公式LINE＠はこちら</strong></a></p>
+
+					<h3>株式会社令和ガールズ 概要</h3>
+					<ul>
+						<li>会社名：株式会社令和ガールズ</li>
+						<li>代表取締役：室井涼介</li>
+						<li>所在地：<br>
+							新宿オフィス：〒160-0022 東京都新宿区西新宿8-14-19 小林第二ビル8階<br>
+							新宿営業所：〒163-0604 東京都新宿区西新宿1丁目25番地 新宿センタービル49階
+						</li>
+						<li>公式サイト：<a href="https://www.reiwagirls.com/" target="_blank">https://www.reiwagirls.com/</a>
+						</li>
+						<li>公式Instagram：<a href="https://www.instagram.com/reiwa_girls_official/"
+								target="_blank">@reiwa_girls_official</a></li>
+						<li>公式LINE＠：<a href="https://lin.ee/BNNecfR" target="_blank">https://lin.ee/BNNecfR</a></li>
+					</ul>
+				</div>
+			</div>
+
+
+
 		</div>
 
 	</main>
@@ -502,7 +749,7 @@
 				<div class="footer-tags">
 					<a href="company.html">COMPANY</a>
 					<a href="service.html">SERVICE</a>
-					<a href="vision.html">VISION</a>
+					<a href="top.html">VISION</a>
 					<a href="recruit.html">RECRUIT</a>
 				</div>
 				<div class="footer-contact">
@@ -539,8 +786,8 @@
 				<div class="footer-nav">
 					<a href="index.html">Top</a>
 					<a href="contact.html">Contact</a>
-					<a href="#">Line</a>
-					<a href="#">Instagram</a>
+					<a href="https://page.line.me/fhy3551i?openQrModal=true">Line</a>
+					<a href="https://www.instagram.com/reiwa_girls_official_/">Instagram</a>
 				</div>
 
 				<div class="footer-address">
@@ -614,7 +861,7 @@
 		});
 
 		// --- Votre Bijouのポップアップ制御
-		const openVotreBijouModal = document.getElementById('openVotreBijouModal'); // ボタンのID
+		const VotreBijouModal = document.getElementById('openVotreBijouModal'); // ボタンのID
 		const popupVotreBijouModal = document.getElementById('popupVotreBijouModal');
 		const closeVotreBijouModal = document.getElementById('closeVotreBijouModal');
 
@@ -631,6 +878,64 @@
 				popupVotreBijouModal.style.display = 'none';
 			}
 		});
+
+		// --- SNS運用代行のポップアップ制御
+		const openSNSModal = document.getElementById('openSNSModal'); // ボタンのID
+		const popupSNSModal = document.getElementById('popupSNSModal');
+		const closeSNSModal = document.getElementById('closeSNSModal');
+
+		openSNSModal.addEventListener('click', () => {
+			popupSNSModal.style.display = 'flex';
+		});
+
+		closeVotreBijouModal.addEventListener('click', () => {
+			popupSNSModal.style.display = 'none';
+		});
+
+		popupSNSModal.addEventListener('click', (e) => {
+			if (e.target === popupSNSModal) {
+				popupSNSModal.style.display = 'none';
+			}
+		});
+
+		// --- SNS運用代行のポップアップ制御
+		const openNextStarsModal = document.getElementById('openNextStarsModal'); // ボタンのID
+		const popupNextStarsModal = document.getElementById('popupNextStarsModal');
+		const closeNextStarsModal = document.getElementById('closeSNSModal');
+
+		openNextStarsModal.addEventListener('click', () => {
+			popupNextStarsModal.style.display = 'flex';
+		});
+
+		closeVotreBijouModal.addEventListener('click', () => {
+			popupNextStarsModal.style.display = 'none';
+		});
+
+		popupNextStarsModal.addEventListener('click', (e) => {
+			if (e.target === popupNextStarsModal) {
+				popupNextStarsModal.style.display = 'none';
+			}
+		});
+
+		// モデルプロデュースのポップアップ制御
+		const openModelProduceModal = document.getElementById('openModelProduceModal');
+		const popupModelProduceModal = document.getElementById('popupModelProduceModal');
+		const closeModelProduceModal = document.getElementById('closeModelProduceModal');
+
+		openModelProduceModal.addEventListener('click', () => {
+			popupModelProduceModal.style.display = 'flex';
+		});
+
+		closeModelProduceModal.addEventListener('click', () => {
+			popupModelProduceModal.style.display = 'none';
+		});
+
+		popupModelProduceModal.addEventListener('click', (e) => {
+			if (e.target === popupModelProduceModal) {
+				popupModelProduceModal.style.display = 'none';
+			}
+		});
+
 
 
 	</script>
