--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
 	<div class="responsive-iframe-wrapper"
 		style="position:relative;width:100%;height:0;padding-bottom:100%;padding-top: 30px;">
 		<iframe
-			src="https://docs.google.com/forms/d/e/1FAIpQLSchXVcBjvr59hTq_hpooAqD8HILsXswWbOSO85htzO1OTrVgA/viewform?embedded=true"
+			src=""
 			width="640" height="541" frameborder="0" marginheight="0" marginwidth="0"
 			style="position:absolute;top:0;left:0;width:100%;height:100%;border:none;">
 		</iframe>
@@ -253,8 +253,8 @@
 				<div class="footer-nav">
 					<a href="index.html">Top</a>
 					<a href="contact.html">Contact</a>
-					<a href="#">Line</a>
-					<a href="#">Instagram</a>
+					<a href="https://page.line.me/fhy3551i?openQrModal=true">Line</a>
+					<a href="https://www.instagram.com/reiwa_girls_official_/">Instagram</a>
 				</div>
 
 				<div class="footer-address">
