--- a/top.html
+++ b/top.html
@@ -313,8 +313,8 @@
 				<div class="footer-nav">
 					<a href="index.html">Top</a>
 					<a href="contact.html">Contact</a>
-					<a href="#">Line</a>
-					<a href="#">Instagram</a>
+					<a href="https://page.line.me/fhy3551i?openQrModal=true">Line</a>
+					<a href="https://www.instagram.com/reiwa_girls_official_/">Instagram</a>
 				</div>
 
 				<div class="footer-address">
